salesforce/force-app/main/default/objects/Info_Request__e/Info_Request__e.object-meta.xml
<CustomObject>
    <description>Platform Event fired when a rep requests account information enrichment (contacts, intelligence) from the Account record page. Consumed by GTM Brain to send Slack notification to admin.</description>
    <label>Info Request</label>
    <pluralLabel>Info Requests</pluralLabel>
</CustomObject>