salesforce/force-app/main/default/objects/Info_Request__e/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Name of the Account Owner at time of request</description>
    <label>Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>