salesforce/force-app/main/default/objects/Info_Request__e/fields/Additional_Detail__c.field-meta.xml
<CustomField>
    <fullName>Additional_Detail__c</fullName>
    <description>Optional detail provided by the rep about what they need</description>
    <label>Additional Detail</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>