salesforce/force-app/main/default/objects/Info_Request__e/fields/Request_Types__c.field-meta.xml
<CustomField>
    <fullName>Request_Types__c</fullName>
    <description>Comma-separated list of requested information types</description>
    <label>Request Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>