salesforce/force-app/main/default/objects/Info_Request__e/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Name of the user who submitted the request</description>
    <label>Requested By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>